fixed titel overflow

--- a/css/board.css
+++ b/css/board.css
@@ -382,7 +382,7 @@ button {
 
 .task-title {
     width: 100%;
-    height: 24px;
+    height: 36px;
     overflow-y: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
